fixed builtin growth not supporting growth chance