@@ -3,8 +3,8 @@ package com.ordana.immersive_weathering.data.block_growths.growths.builtin;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
-import com.ordana.immersive_weathering.data.block_growths.growths.IBlockGrowth;
 import com.ordana.immersive_weathering.data.block_growths.TickSource;
+import com.ordana.immersive_weathering.data.block_growths.growths.IBlockGrowth;
 import net.minecraft.core.Holder;
 import net.minecraft.core.HolderSet;
 import net.minecraft.core.Registry;
@@ -15,7 +15,6 @@ import org.jetbrains.annotations.Nullable;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public abstract class BuiltinBlockGrowth implements IBlockGrowth {
 
@@ -25,14 +24,15 @@ public abstract class BuiltinBlockGrowth implements IBlockGrowth {
                         var factory =
                                 BuiltinGrowthsRegistry.BUILTIN_GROWTHS.get(n);
                         if (factory == null) {
-                            return DataResult.error("Target Block has no properties");
+                            return DataResult.error("No builtin growth found with id " + n);
                         }
                         Codec<BuiltinBlockGrowth> codec = RecordCodecBuilder.create(i -> i.group(
-                                TickSource.CODEC.listOf().optionalFieldOf("tick_sources",List.of(TickSource.BLOCK_TICK))
+                                TickSource.CODEC.listOf().optionalFieldOf("tick_sources", List.of(TickSource.BLOCK_TICK))
                                         .forGetter(b -> b.sources),
                                 RegistryCodecs.homogeneousList(Registry.BLOCK_REGISTRY).optionalFieldOf("owners")
-                                        .forGetter(b -> Optional.ofNullable(b.owners))
-                                ).apply(i, (o, s) -> factory.create(n, s.orElse(null), o)));
+                                        .forGetter(b -> Optional.ofNullable(b.owners)),
+                                Codec.FLOAT.optionalFieldOf("growth_chance", 1f).forGetter(b -> b.growthChance)
+                        ).apply(i, (o, s, c) -> factory.create(n, s.orElse(null), o, c)));
                         return DataResult.success(codec);
                     });
 
@@ -40,11 +40,13 @@ public abstract class BuiltinBlockGrowth implements IBlockGrowth {
     private final HolderSet<Block> owners;
     private final String name;
     private final List<TickSource> sources;
+    protected final float growthChance;
 
-    protected BuiltinBlockGrowth(String name, @Nullable HolderSet<Block> owners, List<TickSource> sources) {
+    protected BuiltinBlockGrowth(String name, @Nullable HolderSet<Block> owners, List<TickSource> sources, float chance) {
         this.owners = owners;
         this.name = name;
         this.sources = sources;
+        this.growthChance = chance;
     }
 
     public String getName() {
@@ -54,7 +56,7 @@ public abstract class BuiltinBlockGrowth implements IBlockGrowth {
     @Override
     public @Nullable Iterable<? extends Block> getOwners() {
         if (owners == null) return null;
-        return this.owners.stream().map(Holder::value).collect(Collectors.toList());
+        return this.owners.stream().map(Holder::value).toList();
     }
 
     @Override
